--- a/BulletHell/BulletHell/BulletHell.vcxproj.filters
+++ b/BulletHell/BulletHell/BulletHell.vcxproj.filters
@@ -32,13 +32,13 @@
     <ClInclude Include="PA9.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Projectile.h">
-      <Filter>Resource Files</Filter>
-    </ClInclude>
     <ClInclude Include="Enemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="downEnemy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Projectile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
