--- a/BulletHell/BulletHell/BulletHell.vcxproj.filters
+++ b/BulletHell/BulletHell/BulletHell.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="downEnemy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Masermind.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PA9.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Projectile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mastermind.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
